--- a/hugo_source/public/team-stats/personnel-stats/index.html
+++ b/hugo_source/public/team-stats/personnel-stats/index.html
@@ -238,9 +238,9 @@
 
 <p>It <em>excludes players that play less than 10% of their team&rsquo;s minutes</em>.</p>
 
-<p>Syracuse led the country in average height at 80.1 inches in the 2017-2018 season.</p>
+<p>Syracuse led the country in average height at 79.4 inches in the 2018-2019 season.</p>
 
-<p>The shortest player featured in over 10% of the team&rsquo;s minutes was 6&rsquo;5 or 75 inches.</p>
+<p>The shortest player featured in over 10% of the team&rsquo;s minutes was 6&rsquo;3 or 73 inches.</p>
 
 <p><strong>Positional Height</strong></p>
 
@@ -248,13 +248,13 @@
 
 <p>It takes the minutes played for each team ordered by height. For example, 20% of minutes played by the tallest players are likely the center&rsquo;s minutes.</p>
 
-<p>For example, Purdue&rsquo;s average height at the center position was +5.4 inches taller than the average of all teams.</p>
+<p>For example, UCF&rsquo;s average height at the center position was +6.4 inches taller than the average of all teams.</p>
 
-<p>Purdue&rsquo;s starting center, Isaac Haas, was 7&rsquo;2 or 86 inches, and their backup center, Matt Haarms was 7&rsquo;3 or 87 inches.</p>
+<p>UCF&rsquo;s starting center, Tacko Fall, was 7&rsquo;6 or 90 inches.</p>
 
 <p><strong>Effective Height</strong></p>
 
-<p>Effective height is the average of the center and power forward position. The same Purdue squad posted an effective height of 3 inches for these 2 positions.</p>
+<p>Effective height is the average of the center and power forward position. The same UCF squad posted an effective height of 3.9 inches for these 2 positions.</p>
 
 <h3 id="bench-minutes">Bench Minutes</h3>
 
@@ -262,9 +262,9 @@
 
 <p>The remaining minutes are assumed to be the bench minutes. If a player has played less than <em>10% of their team&rsquo;s minutes, the player is excluded</em> in the bench minutes.</p>
 
-<p>Alabama&rsquo;s bench played in 36.6% of its minutes in the 2017-2018. That ranked 49th in the country. In 3 of its 5 positions, players shared a large percentage of minutes played.</p>
+<p>New Meixco State&rsquo;s bench played in 49.5% of its minutes in the 2018-2019 season. That ranked 1st in the country. No one on the team played more than 62.2% of the team&rsquo;s minutes.</p>
 
-<p>In contrast, Kansas&rsquo; bench played in only 20.9% of its minutes. That&rsquo;s 345th amongst all Division-I teams.</p>
+<p>In contrast, Hartford&rsquo;s bench played in only 24.8% of its minutes. That&rsquo;s last or 353rd amongst all Division-I teams.</p>
 
 <p>Whether a team relies on its bench is more of an attribute than a driving factor of its success. It can certainly be a factor if there is foul trouble, injuries, or a stretch of several games played in a short period.</p>
 
@@ -311,11 +311,11 @@ Egbuna  |    0.00       |   0.24      | 0.00
 
 <pre><code class="language-text">Year    |   Continuity  | Division-I Rank |
 --------+---------------+----------------+
+18-19   |   21.8        |   326
 17-18   |   11.2        |   348
 16-17   |   30.2        |   322
 15-16   |   22.0        |   335
 14-15   |   49.6        |   176
-13-14   |   23.6        |   336
 --------+---------------+----------------+
 </code></pre>
 
@@ -338,9 +338,9 @@ Senior     |   3        |
 
 <p>Experience uses minutes played similar to the average height calculation. Players that play in <em>less than 10% of their team&rsquo;s minutes are excluded</em>.</p>
 
-<p>In the 2017-2018 season, Wichita State ranked 13th in the country with 2.36 years of experience. This squad featured 9 upperclassmen (seniors and/or juniors).</p>
+<p>In the 2018-2019 season, Hartford ranked 1st in the country with 2.90 years of experience. This squad also had the lowest amount of bench minutes, which could explain why it relied on its upperclassman more.</p>
 
-<p>For a comparison, Kentucky ranked dead last in the country with 0.18 years of experience.</p>
+<p>For a comparison, Duke ranked 350th in the country with 0.65 years of experience, as the Blue Devils played multiple freshman players.</p>
 
 <h3 id="defensive-fingerprint">Defensive Fingerprint</h3>
 
@@ -361,7 +361,7 @@ Senior     |   3        |
 
 <p>Syracuse is known for its 2-3 zone. It statistically is near the bottom of all teams in defensive assist percentage and 3-point attempt percentage.</p>
 
-<p>In the 2017-2018 season, Syracuse ranked 351th in defensive A% at 73.8 and 338th in defensive 3PA% at a 44.5% clip.</p>
+<p>In the 2018-2019 season, Syracuse ranked 352nd in defensive A% at 67.8 and 347th in defensive 3PA% at a 48.1% clip.</p>
 
 <h3 id="2-foul-participation">2-Foul Participation</h3>
 
