--- a/hugo_source/public/team-stats/points-distribution/index.html
+++ b/hugo_source/public/team-stats/points-distribution/index.html
@@ -231,37 +231,37 @@
 
 <p><code>FT = FTM / TP * 100</code></p>
 
-<p>Syracuse scored 24.1% of its points from the free throw line in the 2017-2018 season to rank 5th amongst all Division-I teams.</p>
+<p>Pacific scored 24.3% of its points from the free throw line in the 2018-2019 season to rank 2nd amongst all Division-I teams.</p>
 
-<p>Syracuse scored 594 of its 2466 points from the foul line.</p>
+<p>Pacific scored 520 of its 2138 points from the foul line.</p>
 
-<p><code>FT = 594 / 2466 * 100 = 24.1</code></p>
+<p><code>FT = 520 / 2138 * 100 = 24.3</code></p>
 
-<p>Kansas, a 1-seed in the 2018 NCAA Tournament, was 348th in the country gathering 14.3% of its points from the free throw line in the same season.</p>
+<p>Wofford was 332nd in the country gathering 14.6% of its points from the free throw line in the same season.</p>
 
 <h4 id="2-point-shots">2-Point Shots</h4>
 
 <p><code>2P = 2P / TP * 100</code></p>
 
-<p>57.9% of Texas A&amp;M&rsquo;s points came from 2-point shots in the 2017-2018 season. That&rsquo;s good for 19th amongst all Division-I teams.</p>
+<p>57.9% of Dayton&rsquo;s points came from 2-point shots in the 2018-2019 season. That&rsquo;s good for 6th amongst all Division-I teams.</p>
 
-<p>Texas A&amp;M made 746 2-point shots, good for 1492 points out of its 2631 total points.</p>
+<p>Dayton made 697 2-point shots, good for 1394 points out of its 2406 total points.</p>
 
-<p><code>2P = 1492 / 2631 * 100 = 57.9%</code></p>
+<p><code>2P = 1394 / 2406 * 100 = 57.9%</code></p>
 
-<p>In contrast, the 2017-2018 Missouri team scored 40.8% of its points from 2-point shots. That&rsquo;s 349th in the country in the same season.</p>
+<p>In contrast, the 2018-2019 Villanova team scored 38.0% of its points from 2-point shots. That&rsquo;s 352nd in the country in the same season.</p>
 
 <h4 id="3-point-shots">3-Point Shots</h4>
 
 <p><code>3P = 3P / TP * 100</code></p>
 
-<p>Davidson scored 42.0% of its points from behind the 3-point line in the 2017-2018 season. This percentage was 6th amongst all teams.</p>
+<p>Villanova scored 43.0% of its points from behind the 3-point line in the 2018-2019 season. This percentage was 8th amongst all teams.</p>
 
-<p>The Wildcats made 353 3-points shots or scored 1,059 points of its 2,519 total points from 3-point land.</p>
+<p>The Wildcats made 380 3-points shots or scored 1,140 points of its 2,654 total points from 3-point land.</p>
 
-<p><code>3P = 1059 / 2519 * 100 = 42.0%</code></p>
+<p><code>3P = 1140 / 2654 * 100 = 42.95%</code></p>
 
-<p>And not surprising, the same Davidson team got only 14.6% of its points from the 3-point shot.</p>
+<p>Kentucky scored 23.0% of its points from the 3-point shot, good for 342nd in the country.</p>
 
 <p><strong>Think of it as a pie, if a team is low in one area of point distribution (small slice), it will be high in another area (big slice).</strong></p>
 
@@ -273,39 +273,41 @@
 
 <p><code>FT = Opp. FT / TP * 100</code></p>
 
-<p>Houston&rsquo;s opponents scored 24.3% of their points from the free throw line in the 2017-2018 season. This percentage was 9th in the nation.</p>
+<p>Houston&rsquo;s opponents scored 23.3% of their points from the free throw line in the 2018-2019 season. This percentage was 13th in the nation.</p>
 
-<p>The Cougar&rsquo;s opponents scored 552 of its 2271 points from the foul line.</p>
+<p>The Cougar&rsquo;s opponents scored 527 of its 2258 points from the foul line.</p>
 
-<p><code>FT = 552 / 2271 * 100 = 24.3</code></p>
+<p><code>FT = 527 / 2258 * 100 = 23.3</code></p>
 
-<p>Oklahoma&rsquo;s opponents scored 15% of its points from the free throw line. This was 340th amongst all Division-I teams.</p>
+<p>Notre Dame&rsquo;s opponents scored 13.6% of its points from the free throw line. This was 352nd amongst all Division-I teams.</p>
 
-<p>Oklahoma didn&rsquo;t put its opponents on the foul line while Houston fouled its opponents early and often.</p>
+<p>Notre Dame didn&rsquo;t put its opponents on the foul line while Houston fouled its opponents early and often.</p>
 
 <h4 id="2-point-shots-1">2-Point Shots</h4>
 
 <p><code>2P = 2P / TP * 100</code></p>
 
-<p>Wisconsin&rsquo;s opponents scored 56.3% of their points from 2-point shots in the 2017-2018 season. That&rsquo;s good for 9th amongst all Division-I teams.</p>
+<p>Michigan&rsquo;s opponents scored 59.5% of their points from 2-point shots in the 2018-2019 season. That&rsquo;s good for 2nd amongst all Division-I teams.</p>
 
-<p>The Badgers opponents made 613 2-point shots, good for 1226 points out of their total 2117 points.</p>
+<p>The Wolverines&rsquo; opponents made 642 2-point shots, good for 1284 points out of their total 2158 points.</p>
 
-<p><code>2P = 1226 / 2117 * 100 = 56.6%</code></p>
+<p><code>2P = 1284 / 2158 * 100 = 59.5%</code></p>
 
-<p>As a comparison, West Virginia&rsquo;s opponents scored 42.5% of their points from 2-point shots. That&rsquo;s 338th in the country during the same year.</p>
+<p>As a comparison, Syracuse&rsquo;s opponents scored 40.2% of their points from 2-point shots. That&rsquo;s 350th in the country during the same year.</p>
 
 <h4 id="3-point-shots-1">3-Point Shots</h4>
 
 <p><code>3P = 3P / TP * 100</code></p>
 
-<p>North Carolina allowed opponents to score 39.5% of their points from behind the 3-point line in the 2017-2018 season. This was good for 9th in the country.</p>
+<p>Virginia Tech allowed opponents to score 41.9% of their points from behind the 3-point line in the 2018-2019 season. This was good for 2nd highest in the country.</p>
 
-<p>Tar Heel opponents scored 1071 of their 2711 total points from 3-point shots.</p>
+<p>If you recall, the Hokies allowed 49.9% of opponents shots from behind the 3-point line. If you allow more 3-point shots, it&rsquo;s likely your opponents will score a higher percentage from 3-point land too.</p>
 
-<p><code>3P = 1071 / 2711 * 100 = 39.5%</code></p>
+<p>The Hokies&rsquo; opponents scored 909 of their 2172 total points from 3-point shots.</p>
 
-<p>In contrast, the Marshall allowed its opponents to score just 27.1% of their points from 3-point shots. That was 314th in the nation.</p>
+<p><code>3P = 909 / 2172 * 100 = 41.85%</code></p>
+
+<p>In contrast, Michigan allowed its opponents to score just 25.2% of their points from 3-point shots. That was 346th in the nation.</p>
 <nav class="pagination mt-3"><a class="nav nav-prev" href="/team-stats/team-defense/" title="Team Defense"><i class="ti-arrow-left mr-2"></i>Team Defense</a>
             <a class="nav nav-next" href="/team-stats/personnel-stats/" title="Personnel Stats">Personnel Stats<i class="ti-arrow-right ml-2"></i></a>
             </nav></div>
