--- a/hugo_source/public/team-stats/team-defense/index.html
+++ b/hugo_source/public/team-stats/team-defense/index.html
@@ -231,13 +231,13 @@
 
 <p><code>3P% = Opp. 3PM / Opp. 3PA * 100</code></p>
 
-<p>Cincinnati&rsquo;s defensive 3P% was 30.9% in the 2017-2018 season, good for 7th amongst all Division-I teams.</p>
+<p>Houston&rsquo;s defensive 3P% was 26.9% in the 2018-2019 season, good for 1st amongst all Division-I teams.</p>
 
-<p>Its opponents made 231 3-point shots in 747 attempts.</p>
+<p>Its opponents made 233 3-point shots in 866 attempts.</p>
 
-<p><code>3P% = 231 / 747 * 100 = 30.9%</code></p>
+<p><code>3P% = 233 / 866 * 100 = 26.9%</code></p>
 
-<p>For a comparison, North Carolina&rsquo;s opponents made 38% of their 3-point shots. That&rsquo;s good for 316th in the country in 2017-2018.</p>
+<p>For a comparison, Denver&rsquo;s opponents made 41.8% of their 3-point shots. That&rsquo;s good for 353rd in the country in the 2018-2019 season.</p>
 
 <p><a href="http://kenpom.com/">KenPom</a> has <a href="http://kenpom.com/blog/3point-defense-should-not-be-defined-by-opponents-3p/">written extensively</a> about <em>why</em> a team&rsquo;s 3P% defense should not be defined by its opponent&rsquo;s 3P% offense.</p>
 
@@ -247,13 +247,13 @@
 
 <p><code>2P% = Opp. 2PM / Opp. 2PA * 100</code></p>
 
-<p>The 2017-18 Michigan State Spartans ranked 1st in the nation limiting opponents&rsquo; 2P% to 38.4%.</p>
+<p>UC Irvine ranked 1st in the nation limiting opponents&rsquo; 2P% to 40.5% in the 2018-19 season.</p>
 
-<p>Michigan State opponents made 522 of 1360 2-point shot attempts.</p>
+<p>UC Irvine opponents made 568 of 1403 2-point shot attempts.</p>
 
-<p><code>2P% = 522 / 1360 * 100 = 38.4</code></p>
+<p><code>2P% = 568 / 1403 * 100 = 40.5%</code></p>
 
-<p>For some contrast, NC State&rsquo;s opponents made 53.6% of its 2-point shots. That clip was 297th amongst all Division-I teams.</p>
+<p>For some contrast, Iowa&rsquo;s opponents made 53.5% of its 2-point shots. That clip was 299th amongst all Division-I teams.</p>
 
 <p>While 3P% is not indicative of a team&rsquo;s 3-point defense, 2P% can be attributed some to how a team protects the rim and defends overall.</p>
 
@@ -263,9 +263,9 @@
 
 <p><code>FT% = FTM / FTA * 100</code></p>
 
-<p>BYU opponents made 65.6% of its free throws in the 2017-2018 season. This percentage put the Cougars at 1st in the country.</p>
+<p>UCF opponents made 65.0% of its free throws in the 2018-2019 season. This percentage put the Golden Knights at 3rd in the country.</p>
 
-<p>And in comparison, Xavier opponents made 76.0% of their free throw attempts. This was rated 347th out of all teams in 2017-2018.</p>
+<p>And in comparison, North Dakota opponents made 78.6% of their free throw attempts. This was rated last or 353rd out of all teams in 2018-2019.</p>
 
 <p>Obviously you can&rsquo;t defend free throws. It&rsquo;s an uncontested shot. But if you can limit a team from attempting free throws, it could be a big factor. Can&rsquo;t make them if you don&rsquo;t take them.</p>
 
@@ -275,15 +275,13 @@
 
 <p><code>Blk% = Blocked shots / Opp. 2PA * 100</code></p>
 
-<p>Syracuse ranked 3rd in the country blocking 17.4% of its opponents&rsquo; 2-point shot attempts.</p>
+<p>Duke ranked 3rd in the country blocking 16.4% of its opponents&rsquo; 2-point shot attempts.</p>
 
-<p>The Orange blocked 197 of its opponents&rsquo; 1136 2-point shot attempts.</p>
+<p>The Blue Devils blocked 257 of its opponents&rsquo; 1571 shot attempts.</p>
 
-<p><code>Blk = 197 / 1136 * 100 = 17.4%</code></p>
+<p><code>Blk = 257 / 1571 * 100 = 16.4%</code></p>
 
-<p>This make sense, as Syracuse limited its opponents to shoot 45.1% for inside the 3-point line.</p>
-
-<p>South Dakota State blocked only 5.6% of its opponents&rsquo; shots in 2017-2018. This clip ranked 334th in the country.</p>
+<p>Northeastern blocked only 6.0% of its opponents&rsquo; shots in 2018-2019. This clip ranked 322nd in the country.</p>
 
 <h3 id="stl">Stl%</h3>
 
@@ -291,13 +289,13 @@
 
 <p><code>Stls% = Total steals / Possessions</code></p>
 
-<p>Kansas State posted a 11.9% steals percentage in 2017-2018. This was good for 3rd in the country.</p>
+<p>Washington posted a 13.3% steals percentage in 2018-2019. This was good for 1st in the country.</p>
 
-<p>The Wildcats recorded 294 steals in its opponents&rsquo; estimated 2,480 offensive possessions.</p>
+<p>The Huskies recorded 323 steals in its opponents&rsquo; estimated 2,430 offensive possessions.</p>
 
-<p><code>Stls% = 294 / 2,480 * 100 = 11.9</code></p>
+<p><code>Stls% = 294 / 2,430 * 100 = 13.3%</code></p>
 
-<p>In comparison, Georgia&rsquo;s defensive steal percentage was more than half of that at 5.8%. This ranked 349th in the country.</p>
+<p>In comparison, Winthrop&rsquo;s defensive steal percentage was more than half of that at 5.4%. This ranked last in the country.</p>
 
 <h3 id="a">A%</h3>
 
@@ -305,11 +303,11 @@
 
 <p><code>A% = Opp. assists / Opp. FGM * 100</code></p>
 
-<p>Penn ranked 3rd amongst all Division-I teams limiting its opponents to a 39.6% assist percentage. Penn&rsquo;s opponents had 323 assists on 816 made baskets.</p>
+<p>New Mexico State ranked 1st amongst all Division-I teams limiting its opponents to a 39.2% assist percentage. New Mexico State&rsquo;s opponents had 309 assists on 789 made baskets.</p>
 
-<p><code>A% = 323 / 816 * 100 = 39.58</code></p>
+<p><code>A% = 309 / 789 * 100 = 39.2%</code></p>
 
-<p>Syracuse opponents registered a 73.8% assist percentage in the 2017-2018 season. This was last (351st) amongst all teams.</p>
+<p>Syracuse opponents registered a 67.8% assist percentage in the 2018-2019 season. This was almost dead last (352nd) amongst all teams.</p>
 
 <p><em>Assist percentage sometimes has less do with defense, and more to do with style of play. Syracuse is known for its 2-3 zone, and to beat a zone, you must share the ball.</em></p>
 
@@ -319,13 +317,13 @@
 
 <p><code>3PA% = Opp. 3PA / Opp. FGA * 100</code></p>
 
-<p>Michigan&rsquo;s opponents took 30.2% of their shots from behind the 3-point line in the 2017-2018 season. This was 6th amongst all Division-I teams.</p>
+<p>Stanford&rsquo;s opponents took 27.3% of their shots from behind the 3-point line in the 2018-2019 season. This was 1st amongst all Division-I teams.</p>
 
-<p>The Wolverines opponents&rsquo; attempted 222 3-pointers out of 2,226 total shot attempts.</p>
+<p>The Cardinals opponents&rsquo; attempted 515 3-pointers out of 1,886 total shot attempts.</p>
 
-<p><code>3PA% = 222 / 2226 * 100 = 30.2</code></p>
+<p><code>3PA% = 515 / 1886 * 100 = 27.3%</code></p>
 
-<p>In contrast, Georgia State&rsquo;s opponents attempted 46.2% of their shots from behind the 3-point line. That&rsquo;s percentage ranked 347th in the country.</p>
+<p>In contrast, Virginia Tech&rsquo;s opponents attempted 49.9% of their shots from behind the 3-point line. That&rsquo;s percentage ranked 352nd in the country.</p>
 
 <p><strong>Remember</strong>: Teams have much more control over how many 3-point shots their opponents shoot than how many they make.</p>
 <nav class="pagination mt-3"><a class="nav nav-prev" href="/team-stats/team-offense/" title="Team Offense"><i class="ti-arrow-left mr-2"></i>Team Offense</a>
