--- a/hugo_source/public/team-stats/team-offense/index.html
+++ b/hugo_source/public/team-stats/team-offense/index.html
@@ -231,13 +231,13 @@
 
 <p><code>3P% = 3PM / 3PA * 100</code></p>
 
-<p>Purdue ranked second in the country in 3P% with a 42.0% clip in the 2017-2018 season.</p>
+<p>Wofford ranked second in the country in 3P% with a 41.4% clip in the 2018-2019 season.</p>
 
-<p>The Boilermakers attempted 840 3-point shots and made 353 of them.</p>
+<p>The Terriers attempted 929 3-point shots and made 385 of them.</p>
 
-<p><code>3P% = 353 / 840 * 100 = 42.0%</code></p>
+<p><code>3P% = 385 / 929 * 100 = 41.4%</code></p>
 
-<p>In comparison, UTSA ranked dead last in 3P% in the 2017-2018 season, shooting 26.7% from behind the 3-point line.</p>
+<p>In comparison, Jackson State ranked dead last in 3P% in the 2018-2019 season, shooting 27.9% from behind the 3-point line.</p>
 
 <h3 id="2p">2P%</h3>
 
@@ -245,13 +245,13 @@
 
 <p><code>2P% = 2PM / 2PA * 100</code></p>
 
-<p>Virginia Tech posted a 2P% of 57.3%. That ranked 7th amongst all Division-I teams.</p>
+<p>Gonzaga posted a 2P% of 61.4%. That ranked 1st amongst all Division-I teams.</p>
 
-<p>The Hokies made 642 of 1120 2-point shot attempts.</p>
+<p>The Zags made 890 of 1449 2-point shot attempts.</p>
 
-<p><code>2P% = 642 / 1120 * 100 = 57.3</code></p>
+<p><code>2P% = 890 / 1449 * 100 = 61.4</code></p>
 
-<p>In comparison, Western Carolina shot 45.3% from 2-point land, that was 321st amongst all teams in the 2017-2018 season.</p>
+<p>In comparison, Delaware State made 37.7% from 2-point land, that was 353rd amongst all teams in the 2018-2019 season.</p>
 
 <h3 id="ft">FT%</h3>
 
@@ -259,11 +259,11 @@
 
 <p><code>FT% = FTM / FTA * 100</code></p>
 
-<p>Villanova made 559 free throws out of 718 attempts in 2017-2018. At 77.9%, the Wildcats ranked 11th in the country.</p>
+<p>Mississippi made 461 free throws out of 559 attempts in 2018-2019. At 78.3%, the Rebels ranked 5th in the country.</p>
 
-<p><code>FT% = 559 / 718 * 100 = 77.9</code></p>
+<p><code>FT% = 461 / 559 * 100 = 78.3</code></p>
 
-<p>And in comparison, Michigan shot 66.0% from the free throw line. This was rated 326th amongst all Division-I teams in 2017-2018.</p>
+<p>And in comparison, Saint Louis made 59.8% from the free throw line. This was rated 352nd amongst all Division-I teams in 2018-2019.</p>
 
 <h3 id="blk">Blk%</h3>
 
@@ -271,13 +271,13 @@
 
 <p><code>Blk% = Opp. blocks / 2PA * 100</code></p>
 
-<p>Arizona only had 6.8% of its shots blocked by opponents in 2017-2018. This was good for 17th in the nation.</p>
+<p>Gonzaga only had 5.8% of its shots blocked by opponents in 2018-2019. This was good for 2nd in the nation.</p>
 
-<p>The Wildcats attempted 1362 2-point shots and opponents blocked 92 of those attempts.</p>
+<p>The Bulldogs attempted 1449 2-point shots and opponents blocked 84 of those attempts.</p>
 
-<p><code>Blk = 92 / 1362 * 100 = 6.8%</code></p>
+<p><code>Blk = 84 / 1449 * 100 = 5.8%</code></p>
 
-<p>Pittsburgh had 15.3% of its shots blocked in 2017-2018. That clip ranks last (351st) in the country.</p>
+<p>Pittsburgh had 15.1% of its shots blocked in 2018-2019. That clip ranks last (353rd) in the country.</p>
 
 <h3 id="stl">Stl%</h3>
 
@@ -285,13 +285,13 @@
 
 <p><code>Stls% = Opp. steals / Offensive Possessions</code></p>
 
-<p>College of Charleston&rsquo;s percentage was 6.2% in 2017-2018. This means only 6.2% of the Cougars&rsquo; offensive possessions ended with their opponent stealing the ball. It was good for 1st in the country.</p>
+<p>Cinncinatti&rsquo;s percentage was 5.8% in 2018-2019. This means only 5.8% of the Bearcats&rsquo; offensive possessions ended with their opponent stealing the ball. It was good for 1st in the country.</p>
 
-<p>The Cougars had about 2,270 offensive possessions and their opponents recorded 140 steals.</p>
+<p>The Bearcats had about 2,280 offensive possessions and their opponents recorded 133 steals.</p>
 
-<p><code>Stls% = 140 / 2270 * 100 = 6.2</code></p>
+<p><code>Stls% = 133 / 2280 * 100 = 6.2</code></p>
 
-<p>In comparison, Charlotte registered an offensive steals percentage of 10.6%. This means 10.6% of Charlotte&rsquo;s offensive possessions ended with their opponent stealing the ball. The 10.6% clip was 335th in the country.</p>
+<p>In comparison, North Florida registered an offensive steals percentage of 12.5%. This means 12.5% of North Florida&rsquo;s offensive possessions ended with their opponent stealing the ball. The 12.5% clip was 353rd or dead last in the country.</p>
 
 <h3 id="a">A%</h3>
 
@@ -299,11 +299,11 @@
 
 <p><code>A% = Total team assists / FGM * 100</code></p>
 
-<p>Michigan State posted a 67.6% assist rate in the 2017-2018 season, good for 1st in the nation. The Spartans had 670 assists on 991 made baskets.</p>
+<p>Michigan State posted a 66.8% assist rate in the 2018-2019 season, good for 1st in the nation. The Spartans had 715 assists on 1071 made baskets.</p>
 
-<p><code>A% = 670 / 991 * 100 = 67.6</code></p>
+<p><code>A% = 715 / 1071 * 100 = 66.8</code></p>
 
-<p>California only posted 41.5% assist percentage in the same season. This ranked 342nd amongst all Division-I teams.</p>
+<p>Saint Mary&rsquo;s posted a 37.9% assist percentage in the same season. This ranked 353rd amongst all Division-I teams.</p>
 
 <h3 id="3pa">3PA%</h3>
 
@@ -311,13 +311,13 @@
 
 <p><code>3PA% = 3PA / FGA * 100</code></p>
 
-<p>In 2017-2018, Villanova ranked 12th all Division-I teams with 47.5% of shots coming from behind the 3-point line.</p>
+<p>In the 2018-2019 season, Villanova ranked 3rd all Division-I teams with 53.5% of shots coming from behind the 3-point line.</p>
 
-<p>Vanderbilt attempted 1158 3-pointers out of 1240 total shot attempts.</p>
+<p>Vanderbilt attempted 1081 3-pointers out of 2019 total shot attempts.</p>
 
-<p><code>3PA% = 1158 / 2440 * 100 = 47.5</code></p>
+<p><code>3PA% = 1081 / 2019 * 100 = 53.5</code></p>
 
-<p>In contrast, Kentucky attempted only 25.8% of its shots behind the 3-point line. That&rsquo;s percentage was 344th in the country.</p>
+<p>In contrast, Minnesota attempted only 29.6% of its shots behind the 3-point line. That&rsquo;s percentage was 343rd in the country.</p>
 <nav class="pagination mt-3"><a class="nav nav-prev" href="/team-stats/intro/" title="Intro to Team Stats"><i class="ti-arrow-left mr-2"></i>Intro to Team Stats</a>
             <a class="nav nav-next" href="/team-stats/team-defense/" title="Team Defense">Team Defense<i class="ti-arrow-right ml-2"></i></a>
             </nav></div>
