--- a/hugo_source/public/contact/index.html
+++ b/hugo_source/public/contact/index.html
@@ -95,7 +95,7 @@
     <div class="row">
       <div class="col-12">
         <h2 class="section-title text-primary">Question, Comment, or Concern?</h2> 
-        <p>I might not be able to reply right away or at all, but I'll read every single email. So if you want to send me an email, please do so here: <a mailto='cbbstatshelp@gmail.com'>cbbstatshelp@gmail.com</a>.</p> 
+        <p>I might not be able to reply right away or at all, but I'll read every single email. So if you want to send me an email, please do so here: <a href='mailto:cbbstatshelp@gmail.com'>cbbstatshelp@gmail.com</a>.</p> 
         
 
 <h4 id="who-are-you">Who are you?</h4>
